# work_exercise

./: README.md
socket/: CMakeLists.txt  README.md  makefile
socket/src/: CMakeLists.txt  client  client.cpp  server  server.cpp
socket/src/utils/: clientSocket.cpp  clientSocket.h  client_socket.cpp  client_socket.h  serverSocket.cpp  serverSocket.h  server_socket.cpp  server_socket.h
thread/: makefile
thread/src/: thread  thread.cpp  thread02.cpp  thread2
